{
    "name": "PlayerInputControl",
    "maps": [
        {
            "name": "Normal",
            "id": "b604afe0-f6a0-4102-997a-a1b00019b7b0",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "80e37bc2-545c-44ee-8611-eaed5685e813",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3059775e-f282-4ae7-8900-6c084b8c86b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "d7f019fa-80ae-4476-9f17-65e80c7eae19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19b57969-47ec-4cc5-bd63-26f431b8cab0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "bfb04470-e6f0-4941-8cdc-b0e0e8e2344a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7c1764fe-facf-4b79-9507-26eccc15610f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c508510b-ecfb-41cb-84d7-bb1feb86fbcd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "76df168b-2709-4803-9c69-93d87d8105f3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "73446f53-1de7-4094-8515-f8eaa257561c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fe4dd274-8895-462e-9063-c63ffb9bcc5d",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "7220a6e5-da73-433f-948b-665a7e5ee351",
            "actions": [
                {
                    "name": "SkipDialogue",
                    "type": "Button",
                    "id": "f351ffbe-4cee-4536-880a-3296bef241a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0dd3ebf-f08e-4f31-95e0-2534f69479ac",
                    "path": "<Keyboard>/escape",
                    "interactions": "Hold(duration=2.5)",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}